--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,14 +11,20 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,600" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
 
+    <script src="https://kit.fontawesome.com/1b2cfc4502.js"></script>
+
     <title>Justin Lugo</title>
   </head>
   
   <body>
+
     <noscript>
-      <strong>We're sorry but Justin Lugo's personal website doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but Justin Lugo's personal website doesn't work properly without
+        JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
 
     <div id="app"></div>
+
   </body>
+
 </html>
